# dep-climate

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run-all.sh  terraclimate_wget.sh
src/: list_s3.py  run.py
workflow/: fc-quarterly-0-0-1.yaml
