[project]
name = "dep-climate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dea-tools>=0.3.5",
    "dep-tools",
    "h5netcdf>=1.5.0",
    "typer>=0.15.1",
]

[tool.uv.sources]
dep-tools = { git = "https://github.com/digitalearthpacific/dep-tools.git" }
