[project]
name = "dep-climate"
version = "0.1.0"
description = "Digital Earth Pacific Climate Paramters"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dea-tools",
    "dep-tools",
    "h5netcdf",
    "typer",
]

[tool.uv.sources]
dep-tools = { git = "https://github.com/digitalearthpacific/dep-tools.git" }
